<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:background="#ffffff">

    <TextView android:id="@+id/TextAddress1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#000000"
              android:textSize="24sp"
              android:layout_margin="5dip"
              android:text="@string/active_appointments"/>

    <TextView android:id="@+id/textAdress"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="5dip"
              android:text="@string/appointment_list"/>

    <ListView android:layout_height="0dp"
              android:layout_weight="1"
              android:id="@+id/ListViewCitas"
              android:layout_width="fill_parent"
              android:background="#ffffff"
              android:cacheColorHint="#ffffff"
              android:clickable="true"
              android:choiceMode="multipleChoice"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_margin="5dip"
                  android:layout_gravity="center">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_appointment"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_button"
                android:id="@+id/butonAddDirections"/>

    </LinearLayout>
</LinearLayout>

