<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_final"
        >

    <TextView
            android:id="@+id/txtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="25dp"
            android:text="@string/get_location"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>

    <ImageView android:layout_width="150dp"
               android:layout_height="150dp"

               android:src="@drawable/ic_btn_timetracker"
               android:layout_below="@+id/txtLabel" android:layout_centerHorizontal="true"
               android:layout_marginTop="90dp" android:id="@+id/imageView"/>
    <Button
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:textAlignment="center"
            android:id="@+id/auth_button"
            android:onClick="startAuthenticateClick"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:layout_below="@+id/imageView" android:layout_centerHorizontal="true"
            android:layout_marginTop="100px"/>
    <CheckBox
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_notification"
            android:onClick="onCheckboxClicked"
            android:id="@+id/checknotification"
            android:layout_below="@+id/auth_button"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>
