<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_final"
                tools:context="mx.com.audioweb.AW01.Login">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_dark"
            android:hint="@string/username"
            android:id="@+id/userText"
            android:layout_marginBottom="41dp" android:layout_above="@+id/passwordText"
            android:layout_centerHorizontal="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_alignLeft="@id/userText"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/holo_red_dark"
            android:hint="@string/password"
            android:id="@+id/passwordText"
            android:layout_centerVertical="true" android:layout_alignRight="@+id/userText"
            android:layout_alignEnd="@+id/userText"/>

    <Button
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:textAlignment="center"
            android:id="@+id/loginButton"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:layout_marginBottom="63dp" android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_toStartOf="@+id/userText"
            android:layout_alignBottom="@+id/userText" android:layout_toLeftOf="@+id/userText"
            android:src="@drawable/ic_user"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2" android:layout_alignBottom="@+id/passwordText"
            android:layout_toLeftOf="@+id/userText" android:layout_toStartOf="@+id/userText"
            android:src="@drawable/ic_pass"/>
    <ImageView
            android:layout_marginTop="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:background="@drawable/logo_aw"

            android:layout_alignParentTop="true" android:layout_alignLeft="@+id/loginButton"
            android:layout_alignStart="@+id/loginButton"/>

</RelativeLayout>